fixing broken layout add media queries

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@ body {
   text-transform: uppercase;
 }
 
+@media (max-width: 700px) {
+
+  .header__title {
+    font-size: 2.4em;
+  }
+
+}
+
 .header__label {
   overflow: hidden;
   position: relative;
@@ -44,8 +52,25 @@ body {
   padding-top: 4em;
 }
 
+@media (max-width: 700px) {
+
+  .generator {
+    flex-direction: column;
+    padding: 1em;
+  }
+
+}
+
 .generator__canvas {
   border: 2px solid #000;
+}
+
+@media (max-width: 700px) {
+
+  .generator__canvas {
+    order: 2;
+  }
+
 }
 
 .generator__tools {
@@ -53,6 +78,16 @@ body {
   flex-direction: column;
   justify-content: center;
   margin-left: 2em;
+}
+
+@media (max-width: 700px) {
+
+  .generator__tools {
+    order: 1;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
 }
 
 /* TOOLS */
